--- a/call_center_s1/public/index.html
+++ b/call_center_s1/public/index.html
@@ -26,7 +26,8 @@
     -->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
-
+    
+    <link href='https://cdn.jsdelivr.net/npm/@goongmaps/goong-js/dist/goong-js.css' rel='stylesheet' />
     <title>React App</title>
   </head>
   <body>
